# algorithms-cheat-sheet

./: .gitignore  README.md  pyproject.toml
algorithms_cheat_sheet/: fibonacci.py  fizzbuzz.py  search.py
algorithms_cheat_sheet/patterns/behavioral/: __init__.py  strategy.py
algorithms_cheat_sheet/patterns/creational/: __init__.py  abstract_factory.py  builder.py
algorithms_cheat_sheet/patterns/structural/: __init__.py  proxy.py
tests/: test_fibonacci.py  test_fizzbuzz.py  test_search.py
tests/patterns/: test_abstract_factory.py  test_builder.py  test_proxy.py  test_strategy.py
